@@ -25,6 +25,8 @@ devscripts (2.11.1) UNRELEASED; urgency=low
   [ Christoph Berg ]
   * dscextract: new script, extracts a single file from a Debian source
     package.
+  * debcheckout: When retrieving the source for debian/-only repositories,
+    move all .dsc components to the current directory, not just .orig.tar.gz.
 
  -- David Prévot <taffit@debian.org>  Wed, 08 Jun 2011 12:16:32 -0400
 
